Fix emote menu in left side chat (#7974)
* update twitch emote menu module

* fix resizing depending on placement

* undo scrollbar changes

* Remove key prop from SafeEmoteMenu

* check if standalone window

* improve logic

--- a/src/modules/emote_menu/components/EmoteMenu.module.css
+++ b/src/modules/emote_menu/components/EmoteMenu.module.css
@@ -60,9 +60,16 @@
   width: 2px;
   bottom: 0;
   top: 0;
-  left: 0;
   cursor: col-resize;
   z-index: 2;
+}
+
+.resizeHandleTopEnd {
+  left: 0;
+}
+
+.resizeHandleTopStart {
+  right: 0;
 }
 
 .hidden {
